k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: triage
  labels:
    name: triage
    app: triage-platform
